--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,27 +1,6 @@
-# NOTES
-#
-# In the Azure DevOps Web IDE:
-# 1) Set the following pipeline variables:
-#   - AzureStorageAccountName
-#   - AzureSubscriptionID
-# 2) In the project settings you must create a `service connection` of type `Azure Resource Manager`
-#    call it `SomethingServiceConnection` and reference by name in in the AzureCLI tasks
-#    `connectedServiceNameARM` input.
-#
-# These will be used by the AzureCLI@2 to copy the build artifact(s) to an Azure blob storage for easy
-# downloading or further processing.
-#
-# For build numbering you can use the following options:
-# BUILD_BUILDID     = NN            # Linier build number eg. 87, 88, 89
-# Build.BuildNumber = NN            # Linier daily build number eg. 1, 2, 3
-# Build.BuildId     = YYYYMMDD.NN   # Build identifier eg. 20190515.3, 20190516.1
-#
-# Add steps that install certificates, test, sign, and distribute an app, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/xcode
-#
 
 trigger:
-- master
+- none
 
 pool:
   vmImage: 'macos-latest'
@@ -40,16 +19,8 @@ variables:
   ITCTeamID: 908186
 
 steps:
-- task: InstallAppleCertificate@2
-  inputs:
-    certSecureFile: $(CertificateFileName)
-    certPwd: '$(P12password)'
-    keychain: 'temp'
-- task: InstallAppleProvisioningProfile@1
-  inputs:
-    provisioningProfileLocation: 'secureFiles'
-    provProfileSecureFile: $(ProfileFileName)
-    removeProfile: true
+
+
 - task: CmdLine@2
   displayName: Bump build number
   timeoutInMinutes: 1
@@ -78,16 +49,4 @@ steps:
     exportOptionsPlist: $(ExportOptionsFileName)
     archivePath: '$(Build.ArtifactStagingDirectory)/pack'
     args: '-xcconfig release.xcconfig'
-- task: AppStoreRelease@1
-  timeoutInMinutes: 25
-  condition: ne(variables['Build.Reason'], 'PullRequest')
-  inputs:
-    serviceEndpoint: $(AppStoreServiceConnectionName)
-    appIdentifier: $(BundleID)
-    appType: 'iOS'
-    ipaPath: '**/*.ipa'
-    releaseTrack: 'TestFlight'
-    shouldSkipWaitingForProcessing: true # don't wait
-    shouldSkipSubmission: true # don't auto send to testers
-  env:
-    FASTLANE_ITC_TEAM_ID: $(ITCTeamID)
+
